--- a/src/Styles/Trailer.css
+++ b/src/Styles/Trailer.css
@@ -14,22 +14,23 @@
   z-index: 100;
 }
 
-#TrailerMovie-name-dark {
+#Trailer-name-dark {
   display: flex;
   width: 100%;
   justify-content: center;
   position: absolute;
   top: -100px;
-  font-size: 20px;
-  color: #EE9B00;
+  font-size: 40px;
+  font-weight: bold;
+  color: #ffffff;
 }
 
-#TrailerMovie-name-light {
+#Trailer-name-light {
   display: flex;
   width: 100%;
   justify-content: center;
   position: absolute;
   top: -100px;
-  font-size: 16px;
-  color: #ff206e;
+  font-size: 40px;
+  color: black;
 }
